[gd_scene load_steps=5 format=3 uid="uid://bvcjpucnkony2"]

[ext_resource type="Script" path="res://Scenses/pipe_pair.gd" id="1_05y1m"]
[ext_resource type="Texture2D" uid="uid://ndtoca0bqaop" path="res://Assets/pipe-green.png" id="1_8eujl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldl3p"]
size = Vector2(52, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_brxik"]
size = Vector2(12, 167)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_05y1m")

[node name="TopPipe" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
position = Vector2(0, -300)
rotation = 3.14159
texture = ExtResource("1_8eujl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(0, -300)
shape = SubResource("RectangleShape2D_ldl3p")

[node name="BottomPipe" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, 300)
texture = ExtResource("1_8eujl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(0, 300)
shape = SubResource("RectangleShape2D_ldl3p")

[node name="Scored" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
position = Vector2(39, 0.5)
shape = SubResource("RectangleShape2D_brxik")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Scored" to="." method="_on_point_scored"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
